--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Spline+Sans+Mono&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Rubik+Mono+One&family=Spline+Sans+Mono&display=swap');
 :root{
     --color1: black;
 
     --font1: 'Inter', sans-serif;
     --font2: 'Spline Sans Mono', monospace;
+    /* --font3: 'Rubik Mono One', sans-serif; */
 }
 
 *{
@@ -17,6 +17,16 @@
 
 html{
     scroll-behavior: smooth;
+}
+
+h1{
+    font-family: var(--font1);
+    font-size: 3em;
+}
+
+h2, h3{
+    font-family: var(--font2);
+    font-size: 2.3em;
 }
 
 ul{
@@ -51,9 +61,9 @@ header .wrapper{
     transition:  all 1s ease;
 }
 
-.wrapper a:hover{
+/* .wrapper a:hover{
     color: rgb(214, 202, 24);
-}
+} */
 
 ul{
     display: flex;
@@ -75,12 +85,48 @@ a.cta{
     padding: .5em .8em;
     border-radius: 0 .7em 0 .7em;
     font-weight: bold;
+    transition: 1s all ease;
+}
+
+a.cta:hover{
+    background: rgb(214, 202, 24);
 }
 
 /* Hero */
 #hero{
-    height: 200vh;
-    background: rgb(7, 4, 24);
+    height: 150vh;
+    background: rgb(14, 10, 39);
     padding-block: 200px;
     text-align: center;
+}
+
+/* Introduccion */
+#introduccion{
+    height: 100vh;
+    background: rgb(5, 1, 29);
+}
+
+.intro-titulo{
+    padding: 90px;
+}
+
+#introduccion img{
+    background: transparent;
+}
+
+/* General */
+#general{
+    height: 100vh;
+    background: rgb(14, 10, 39);
+
+}
+
+
+
+
+/* Footer */
+
+footer{
+    height: 20vh;
+    background: black;
 }
