--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,12 +21,12 @@ html{
 
 h1{
     font-family: var(--font1);
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 h2, h3{
     font-family: var(--font2);
-    font-size: 2.3em;
+    font-size: 2em;
 }
 
 ul{
@@ -46,9 +46,11 @@ header{
     width: 100%;
     padding: 1em 0;
     color: white;
+    z-index: 100;
 }
 
 header .wrapper{
+    /* height: 10vh; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -81,7 +83,7 @@ ul{
 
 a.cta{
     color: black;
-    background: white;
+    background: rgb(214, 202, 24);
     padding: .5em .8em;
     border-radius: 0 .7em 0 .7em;
     font-weight: bold;
@@ -89,15 +91,49 @@ a.cta{
 }
 
 a.cta:hover{
-    background: rgb(214, 202, 24);
+    background: rgb(189, 146, 5);
 }
 
 /* Hero */
 #hero{
-    height: 150vh;
-    background: rgb(14, 10, 39);
-    padding-block: 200px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+  
+#hero video{
+    z-index: -1;
+    width: 50vw;
+    height: 105vh;
+    object-fit: cover;
+    /* filter: grayscale(70%); */
+    /* filter: blur(3px); */
+    filter: brightness(0.7);
+}
+@media(min-aspect-ratio: 16/9){
+#hero video{
+    width: 100%;
+    height: auto;
+}
+}
+  
+.content{
+    width: 100%;
+    position: absolute;
+    color: white;
+    top: 45%;
+    transform: translateY(-50%);
     text-align: center;
+}
+.content h1, .content h2{
+    /* margin-top: 80px; */
+    /* font-weight: 800; */
+    text-shadow: -0.5pxrgb(100, 93, 93)ack, 0 0.5px rgb(56, 52, 52), 0.5px rgb(94, 86, 86)ck, 0 -0.5px rgb(82, 73, 73);
+}
+
+.content div{
+    margin-top: 30px;
 }
 
 /* Introduccion */
