--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,8 +29,11 @@ h2, h3{
     font-size: 2em;
 }
 
-ul{
+ul, li{
     list-style: none;
+    margin: 0;
+    list-style-position:inside;
+
 }
 
 a{
@@ -67,7 +70,7 @@ header .wrapper{
     color: rgb(214, 202, 24);
 } 
 
-ul{
+.wrapper ul{
     display: flex;
     gap: 2.4em;
 }
@@ -243,8 +246,34 @@ a.cta:hover{
     padding-block: 30px;
 }
 
+.intro-info{
+    height: 100%;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+}
+
+.intro-cards{
+    height: 90%;
+    width: 45%;
+    background: #1c1c1c;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 3px;
+    transition: all 1s ease;
+}
+
+.intro-cards:hover{
+    transform: translateY(-10px);
+    background: #292828;
+}
+
 .intro-foto{
-    width: 50%;
+    width: 30%;
     transform: rotateY(-180deg);
     -ms-transform: rotateY(-180deg); /* IE 9 */
     -webkit-transform: rotateY(-180deg);
@@ -255,40 +284,82 @@ a.cta:hover{
     /* width: 30%; */
 }
 
-.intro-info{
-    height: 100vh;
+/* General */
+#general{
+    height: 140vh;
+    /* background: rgb(14, 10, 39); */
+    overflow: hidden;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.intro-info p, .intro-info h2{
-    padding-block: 10px;
-}
-
-/* General */
-#general{
-    height: 100vh;
-    /* background: rgb(14, 10, 39); */
-    overflow: hidden;
+    align-items: center;
 }
 
 #general img{
     z-index: -1;
+    height: 100%;
     width: 120vw;
+    position: absolute;
     object-fit: cover;
-
 }
 
 .general-intro{
-    padding: 90px;
-    padding-left: 400px;
-    /* width: 70%; */
-    text-align: right;
+    width: 70%;
+    height: 25%;
 }
 
 .intro-general p, h2{
     padding-block: 10px;
+}
+
+.general-conteiner{
+    width: 90%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.general-cards{
+    height: 80%;
+    width: 30%;
+    background: rgba(207, 200, 200, 0.219);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    padding: 50px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.general-cards ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    gap: 8px;
+    margin-top: 10px;
+    --icon-space: 1.3em;
+}
+
+.general-cards li{
+    padding-left: var(--icon-space);
+}
+
+.general-cards li:before {
+    content: "\f00c"; /* FontAwesome Unicode */
+    font-family: FontAwesome;
+    display: inline-block;
+    margin-left: calc( var(--icon-space) * -1 );
+    width: var(--icon-space);
+}
+
+.general-medio{
+    height: 95%;
+    width: 35%;
 }
 
 /* Nosotros */
