--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Rubik+Mono+One&family=Spline+Sans+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root{
     --color1: black;
 
@@ -140,7 +141,7 @@ a.cta:hover{
 .content h1, .content h2{
     /* margin-top: 80px; */
     /* font-weight: 800; */
-    text-shadow: -0.5pxrgb(100, 93, 93)ack, 0 0.5px rgb(56, 52, 52), 0.5px rgb(94, 86, 86)ck, 0 -0.5px rgb(82, 73, 73);
+    /* text-shadow: -0.5pxrgb(100, 93, 93)ack, 0 0.5px rgb(56, 52, 52), 0.5px rgb(94, 86, 86)ck, 0 -0.5px rgb(82, 73, 73); */
 }
 
 .content div{
@@ -402,3 +403,91 @@ footer{
     height: 20vh;
     background: black;
 }
+
+/* Form */
+#form-box{
+    padding-top: 150px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+}
+
+.form {
+    align-self: center;
+}
+ 
+.form__input {
+    width: clamp(120px, 50vw, 420px);
+    height: 2.5rem;
+    padding: 0 1.25rem;
+    border: 1px solid black;
+    border-radius: 2px;
+    margin: 0.625rem auto;
+    transition: all 250ms;
+    @media (min-width: 768px) {
+        width: clamp(120px, 35vw, 420px);
+    }
+
+    &:focus {
+        outline: none;
+        border-top-color: rgba(0,0,0,0.1);
+    }
+
+/* When the input field (.form__input) is in focus, 
+    transform the .form__label and change colors*/
+/* ALSO, if the input field's placeholder is NOT shown (when the input field has content),
+    transform the .form__label and change colors. */
+    &:focus + .form__label, &:not(:placeholder-shown) + .form__label {
+        transform: translateY(-4.50rem) scale(1);
+        color: black;
+    }
+
+/* THIS PART IS IMPORTANT!! */
+/* The block below hides the placeholder entirely. */
+/* For all intents and purposes, the placeholder no longer exists. */
+/* What shows on the input field is only the label*. */
+/* HOWEVER, the input fields still recognizes that the placeholder exists!*/
+/* The placeholder is just invisible. We need the placeholder to exist for
+    some weird CSS stuff. If we skip this, we can't make it CSS-only. */
+    &::placeholder {
+        display: none;
+        color: transparent;
+        
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+        user-select: none; /* Standard syntax */
+    }
+
+/* When the placeholder is NOT shown,
+    style the top border. */
+/* This makes the top border fade-out when the placeholder disappears. */
+    &:not(:placeholder-shown) {
+        border-top-color: rgba(0, 0, 0, 0.5);
+    }
+}
+
+.form__label {
+font-size: 1rem;
+color: grey;
+display: block;
+
+/* Moves the label on TOP of the placeholder */
+/* You'll need to change this as needed */
+transform: translate(1.25rem,-2.5rem);
+transform-origin: 0 0; /* Used later for transitions */
+transition: all 500ms;
+
+-webkit-user-select: none; /* Safari */
+-ms-user-select: none; /* IE 10 and IE 11 */
+user-select: none; /* Standard syntax */
+
+/* THIS PART IS IMPORTANT! */
+/* This line prevents the label from being selected.*/
+/* This is crucial because if this line doesn't exist, users can
+    click on the label, instead of the input field. That's bad UX! */
+pointer-events: none; 
+}
+  
