--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,8 +43,7 @@ ul, li{
 }
 
 a{
-    text-decoration: none !important;
-    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+    text-decoration: none;
     color: inherit;
 }
 
@@ -243,6 +242,7 @@ a.cta:hover{
     color: black;
     text-align: center;
     font-family: var(--font1);
+    font-size: 1.3em;
 }
 
 /* Introduccion */
@@ -270,12 +270,18 @@ a.cta:hover{
     height: 90%;
     width: 45%;
     background: #1c1c1c;
-    padding: 20px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     border-radius: 3px;
     transition: all 1s ease;
+}
+
+.intro-cards a{
+    width: max-content;
+    border-bottom: 1px solid #ddc915;
+    color: #ddc915;
 }
 
 .intro-cards:hover{
@@ -407,51 +413,72 @@ footer{
 /* Form */
 #form-box{
     padding-top: 150px;
-    width: 100%;
-    height: 100%;
+    margin-inline: 5%;
+    width: 90%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5%;
 }
 
+.form-texto{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+}
+
 .form {
-    align-self: center;
+    height: 80%;
+    width: 50%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 40px;
 }
  
+.form-div{
+    position: relative;
+}
+
+#titulo{
+    grid-area: 1 / 1 / 2 / 3;
+}
+
+#name{
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+#email{
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+#subject{
+    grid-area: 3 / 1 / 6 / 3;
+}
+
 .form__input {
-    width: clamp(120px, 50vw, 420px);
-    height: 2.5rem;
-    padding: 0 1.25rem;
+    width: 100%;
+    height: 100%;
+    /* padding: 0 1.25rem; */
     border: 1px solid black;
+    padding: 15px;
+    color: black;
     border-radius: 2px;
-    margin: 0.625rem auto;
     transition: all 250ms;
-    @media (min-width: 768px) {
-        width: clamp(120px, 35vw, 420px);
-    }
 
     &:focus {
         outline: none;
         border-top-color: rgba(0,0,0,0.1);
     }
-
-/* When the input field (.form__input) is in focus, 
-    transform the .form__label and change colors*/
-/* ALSO, if the input field's placeholder is NOT shown (when the input field has content),
-    transform the .form__label and change colors. */
     &:focus + .form__label, &:not(:placeholder-shown) + .form__label {
-        transform: translateY(-4.50rem) scale(1);
-        color: black;
+        transform: translateY(-45px) scale(1);
+        color: white;
     }
-
-/* THIS PART IS IMPORTANT!! */
-/* The block below hides the placeholder entirely. */
-/* For all intents and purposes, the placeholder no longer exists. */
-/* What shows on the input field is only the label*. */
-/* HOWEVER, the input fields still recognizes that the placeholder exists!*/
-/* The placeholder is just invisible. We need the placeholder to exist for
-    some weird CSS stuff. If we skip this, we can't make it CSS-only. */
     &::placeholder {
         display: none;
         color: transparent;
@@ -461,9 +488,6 @@ footer{
         user-select: none; /* Standard syntax */
     }
 
-/* When the placeholder is NOT shown,
-    style the top border. */
-/* This makes the top border fade-out when the placeholder disappears. */
     &:not(:placeholder-shown) {
         border-top-color: rgba(0, 0, 0, 0.5);
     }
@@ -473,21 +497,15 @@ footer{
 font-size: 1rem;
 color: grey;
 display: block;
-
-/* Moves the label on TOP of the placeholder */
-/* You'll need to change this as needed */
-transform: translate(1.25rem,-2.5rem);
+position: absolute;
+top: 15px;
+left: 10px;
 transform-origin: 0 0; /* Used later for transitions */
 transition: all 500ms;
 
 -webkit-user-select: none; /* Safari */
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */
-
-/* THIS PART IS IMPORTANT! */
-/* This line prevents the label from being selected.*/
-/* This is crucial because if this line doesn't exist, users can
-    click on the label, instead of the input field. That's bad UX! */
 pointer-events: none; 
 }
   
