--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root{
     --color1: black;
-
     --font1: 'Inter', sans-serif;
     --font2: 'Spline Sans Mono', monospace;
     /* --font3: 'Rubik Mono One', sans-serif; */
@@ -17,7 +16,7 @@
 }
 
 body{
-    background: #202020;
+    background: rgb(18,18,18);
 }
 
 
@@ -33,6 +32,20 @@ h1{
 h2, h3{
     font-family: var(--font2);
     font-size: 2em;
+}
+
+p{
+    color: #999494;
+}
+
+mark{
+    color: white;
+    background: transparent;
+    font-weight: 550;
+}
+
+span{
+    color: #ddc915;
 }
 
 ul, li{
@@ -178,19 +191,6 @@ a.cta:hover{
     padding-bottom: 70px;
 }
 
-/* .prueba-conteiner{
-        position: absolute;
-    width: 90%;
-    height: 80%;
-    background: #1c1c1c;
-    top: 10%;
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto; 
-    border-radius: 50px;
-} */
-
 .prueba-object{
     background: #1c1c1c;
     border-radius: 50px;
@@ -253,6 +253,8 @@ a.cta:hover{
     background: black;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
     overflow: hidden;
     padding-block: 30px;
 }
@@ -261,7 +263,7 @@ a.cta:hover{
     height: 100%;
     width: 70%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 5%;
 }
@@ -276,12 +278,7 @@ a.cta:hover{
     justify-content: space-around;
     border-radius: 3px;
     transition: all 1s ease;
-}
-
-.intro-cards a{
-    width: max-content;
-    border-bottom: 1px solid #ddc915;
-    color: #ddc915;
+    z-index: 10;
 }
 
 .intro-cards:hover{
@@ -289,22 +286,40 @@ a.cta:hover{
     background: #292828;
 }
 
+.intro-cards a{
+    width: fit-content;
+    border-bottom: 1px solid #ddc915;
+    color: #ddc915;
+    & i{
+        color: #ddc915;
+        transition: all .5s;
+    }
+
+    &:hover{
+        & i{
+            transform: rotate(-90deg);
+        }
+    }
+}
+
 .intro-foto{
-    width: 30%;
+    width: 25%;
+    height: 100%;
     transform: rotateY(-180deg);
     -ms-transform: rotateY(-180deg); /* IE 9 */
     -webkit-transform: rotateY(-180deg);
 }
 
 .intro-foto img{
+    object-fit: cover;
     height: 150vh;
     /* width: 30%; */
 }
 
 /* General */
 #general{
-    height: 140vh;
     /* background: rgb(14, 10, 39); */
+    height: 140vh;
     overflow: hidden;
     position: relative;
     display: flex;
@@ -322,23 +337,26 @@ a.cta:hover{
 }
 
 .general-intro{
-    width: 70%;
+    width: 90%;
     height: 25%;
     display: flex;
     align-items: center;
+    & h1::before{
+        content: "Servicios";
+        color: #ddc915;
+        font-weight: 400;
+        font-size: .4em;
+        display: block;
+    }
 }
 
-.general-intro h1{
-    padding-left: 10px;
-    border-left: 3px solid white;
-}
 
 .general-conteiner{
     width: 90%;
     height: 70%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .general-main{
@@ -346,7 +364,7 @@ a.cta:hover{
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     gap: 5%;
 }
@@ -364,11 +382,14 @@ a.cta:hover{
     /* align-items: ; */
     justify-content: space-evenly;
 
+    & div p{
+        color: white;
+    }
 }
 
 .data{
     height: 100%;
-    width: 30%;
+    width: 40%;
     justify-content: center;
 }
 
@@ -384,6 +405,9 @@ a.cta:hover{
 
 .general-cards li{
     padding-left: var(--icon-space);
+    & a{
+        text-decoration: underline;
+    }
 }
 
 .general-cards li:before {
@@ -397,17 +421,106 @@ a.cta:hover{
 /* Nosotros */
 #nosotros{
     height: 100vh;
-    background: rgb(5, 1, 29);
+    padding-block: 10vh;
+    background: rgb(18,18,18);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
 }
 
-#nosotros h1{
-    padding: 90px;
+.nosotros-intro{
+    width: 30%;
+    height: 100%;
+    gap: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    text-align: left;
+    position: relative;
+    
+    & h1::before{
+        content: "Quienes Somos";
+        color: #ddc915;
+        font-weight: 400;
+        font-size: .4em;
+        display: block;
+    }
 }
+
+
+
+.nosotros-box{
+    height: 100%;
+    width: 55%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.nosotros-cards{
+    height: 90%;
+    width: 50%;
+    background: #1c1c1c;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 3%;
+    border-radius: 3px;
+    transition: all 1s ease;
+
+    &:hover{
+        transform: translateY(-10px);
+        background: #292828;
+    }
+}
+
+.nosotros-cards-img{
+    height: 40%;
+    width: 50%;
+    background: white;
+}
+
 /* Footer */
-
 footer{
     height: 20vh;
     background: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+
+    & p a{
+        color: white;
+        text-decoration: underline;
+    }
+}
+
+.footer-box{
+    height: 70%;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-card{
+    width: 30%;
+    height: 100%;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap: 5px;
+
+    & a{
+        /* font-size: .8em; */
+    }
 }
 
 /* Form */
